[metadata]
name = icd
version = attr: icd._version.version
author = Roman Ludwig
author_email = roman.ludwig@usz.ch
description = Python library for dealing with ICD codes (revisions 10 & 11)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = file: LICENSE
url = https://github.com/rmnldwg/icd
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = icd
python_requires = >=3.8
install_requires = 
    untangle
    requests
test_requires = 
    pytest
    coverage